# py_data

./: .gitignore  main.py  pyproject.toml
src/PDSH/: chp2_numpy的属性.ipynb  chp2_创建numpy数组.ipynb  readme.txt
src/PFDA/: ch04.ipynb
