[project]
name = "pydata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "black>=25.1.0",
    "lxml>=5.4.0",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "patsy>=1.0.1",
    "ruff>=0.11.13",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "statsmodels>=0.14.4",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
